--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <base href="/">
 
   <meta charset="utf-8">
-  <title>The Jerrard Garage</title>
+  <title>TJG SG | No.1 customised shirts printing company in Singapore</title>
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,7 +21,7 @@
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="">
+    <meta name="description" content="Good quality, wide range of T-Shirts and apparels products at cheap pricing. No minimum order is required. Contact Us Now for your Instant Quote!">
     <meta name="author" content="">
 
     <link href='https://fonts.googleapis.com/css?family=Merriweather+Sans:700,300italic,400italic,700italic,300,400' rel='stylesheet' type='text/css'>
