--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                               <li><a href="index.html">Home</a></li>
                               <li><a href="about.html">About Us</a></li>
                               <li><a href="portfolio.html">Portfolio Gallery</a></li>
-                              <li><a href="blog.html">Blog</a></li>
+                              <!-- <li><a href="blog.html">Blog</a></li> -->
                               <li><a href="product.html">Product</a></li>
                               <li><a href="printing.html">Printing Methods</a></li>
                               <li><a href="faq.html">FAQ</a></li>
